# grayscale-zipper

./: .gitignore  CMakeLists.txt  CompressingSpec.md  README.md  run.sh
scripts/: compile.sh
src/: FileTableModel.cpp  FileTableModel.h  ZipperWrapper.cpp  ZipperWrapper.h  main.cpp
src/ZipperLibrary/: CMakeLists.txt  Decoder.cpp  Encoder.cpp  Encoder.h  ImageHandler.cpp  ImageHandler.h  Misc.h
src/ZipperLibrary/include/: Decoder.h  Encoder.h  ZipperException.h
src/qml/: main.qml
